# artdaq-demo

./: .gitignore  CMakeLists.txt  CreateNewFragmentGenerator.rb  README.md
.github/: copilot-instructions.md
artdaq-demo/ArtModules/: CMakeLists.txt  CheckIntegrity_module.cc  DemoDataDumper_module.cc  DemoDataProducer_module.cc  DemoViewer_module.cc  ToyDump_module.cc  WFViewer_module.cc
artdaq-demo/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.cc.in
artdaq-demo/Generators/: CMakeLists.txt  ToySimulator.hh  ToySimulator_generator.cc
artdaq-demo/Generators/ToyHardwareInterface/: CMakeLists.txt  ToyHardwareInterface.cc  ToyHardwareInterface.hh
artdaq-demo/RoutingPolicies/: MisbehaviorTest_policy.cc
doc/: CMakeLists.txt
test/ArtModules/: driver_with_verification.sh
tools/: CMakeLists.txt  art-suite-spack-start.sh  art-suite-spack-start_v0.28.sh  art-suite-spack-start_v1.1.sh  calculate_test_coverage.sh  check_integration_tests.sh  configure_artdaq_database.sh  downloadDeps.sh  installArtDaqDemo.sh  multi_udp_send_artdaq.py  quick-mrb-start.sh  quick-spack-start.sh  quick-spack-start_v0.28.sh  quick-spack-start_v1.1.sh  quick-spack-start_v1.sh  quick-start.sh  run_demo.sh  run_integration_tests.sh  setup_spack_build_system.sh  setup_spack_build_system_v0.28.sh  setup_spack_build_system_v0.sh  setup_spack_build_system_v1.1.sh  setup_spack_build_system_v1.sh  tmux_cmd.sh  xt_cmd.sh
tools/fcl/: DemoDriverNoDisk.fcl  DemoDriverWithDisk.fcl  TransferInputMulticast.fcl  TransferInputShmem.fcl  TransferInputShmemWithDelay.fcl  UDPReceiver.fcl  (+19 more)
ups/: product_deps
(+3 files in other folders)
